Backport the layer to Yocto release Dunfell
Backport to the old syntax supported in LTS release Dunfell.

Signed-off-by: Leon Anavi <leon.anavi@konsulko.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,4 +10,4 @@ BBFILE_PATTERN_meta-weston-rdp = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-weston-rdp = "6"
 
 LAYERDEPENDS_meta-weston-rdp = "core"
-LAYERSERIES_COMPAT_meta-weston-rdp = "kirkstone"
+LAYERSERIES_COMPAT_meta-weston-rdp = "dunfell"
